<resources>
    <string name="app_name">Jotty</string>
    <string name="add_new_note">add new note</string>
    <string name="lorem_ipsum">What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="date_placeholder">Date: 02–08–2022</string>
    <string name="favorite_notes">Favorite</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="sort">Sort by</string>
    <string name="date_created">Date created</string>
    <string name="date_modified">Date modified</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="pin_favorites">Pin favorites</string>
    <string name="show_archived">Show archived</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="about">About</string>

    <string-array name="sortBy">
        <item>Title</item>
        <item>Date created</item>
        <item>Date modified</item>
    </string-array>

    <string-array name="hex_colors">
        <item>#FFFFFF</item>
        <item>#E3E3FF</item>
        <item>#DFF2FD</item>
        <item>#E2FCE6</item>
        <item>#FCFADE</item>
        <item>#FFEEE2</item>
        <item>#FFDBDB</item>
    </string-array>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="get_source_code">Get Source code</string>
    <string name="Notes_desc">A simple and intuitive Notepad app for writing notes, memos, e-mails, messages, shopping lists and to-do lists.</string>
    <string name="contact_me">contact me</string>
    <string name="speech_to_text_button">speech to text button</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="no_notes">No Notes matched your search</string>
</resources>