<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_add_title"
            style="@style/DetailStyle"
            android:hint="@string/title"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <TextView
            style="@style/DateTimeStyle"
            android:id="@+id/tv_note_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/date_placeholder"
            android:textSize="14dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_14"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_note_date">

            <View
                android:id="@+id/view"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_note_style" />

            <EditText
                style="@style/NoteStyle"
                android:layout_margin="0dp"
                android:textSize="@dimen/large_regular_text"
                android:id="@+id/et_add_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/margin_14"
                android:paddingEnd="@dimen/margin_14" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>